Adds resource delete endpoint.
refs https://github.com/LD4P/sinopia_editor/issues/2910
